added width to images and font

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -6,3 +6,34 @@ html {
 	box-sizing: inherit;
 }
 
+body {
+	margin:0em;
+	font-family: 'Contrail One', cursive;
+}
+
+header {
+	background-color: #2c3950;
+}
+
+h1{
+	background-color: #1a2230;
+	color: white;
+	padding: 1em;
+	text-align: center;
+}
+
+.body {
+	width: 320px;
+}
+
+.brain {
+	width: 46px;
+}
+
+.left {
+	width: 125px;
+}
+
+.right {
+	width: 125px;
+}
