--- a/CSS/main.css
+++ b/CSS/main.css
@@ -13,6 +13,7 @@ body {
 
 header {
 	background-color: #2c3950;
+	margin-top: -100px;
 }
 
 h1{
@@ -39,7 +40,7 @@ div {
 	width: 46px;
 	position: relative;
 	right: 121px;
-	top: 70px;
+	top: 100px;
 }
 
 .left {
@@ -54,4 +55,14 @@ div {
 	position: relative;
 	left: 33px;
 	top:137px;
+}
+
+div:hover .left {
+	top:125px;
+	right: 0px;
+}
+
+div:hover .right{
+	top: 125px;
+	left: 65px;
 }
