--- a/CSS/main.css
+++ b/CSS/main.css
@@ -13,7 +13,6 @@ body {
 
 header {
 	background-color: #2c3950;
-	margin-top: -100px;
 }
 
 h1{
@@ -34,39 +33,39 @@ div {
 .body {
 	width: 320px;
 	display:block;
+	margin-top: 50px;
 }
 
 .brain {
 	width: 46px;
-	position: relative;
-	right: 121px;
-	top: 100px;
+	position: absolute;
+	right: 138px;
+	top: 80px;
+	transition: all 200ms linear;
 }
 
 .left {
 	width: 125px;
-	position: relative;
-	right: -36px;
-	top: 137px;
+	position: absolute;
+	left: 35px;
+	transition: all 200ms linear;
 }
 
 .right {
 	width: 125px;
-	position: relative;
-	left: 33px;
-	top:137px;
+	position: absolute;
+	right: 35px;
+	transition: all 200ms linear;
 }
 
 div:hover .left {
-	top:125px;
-	right: 0px;
+	left: 0px;
 }
 
 div:hover .right{
-	top: 125px;
-	left: 65px;
+	right: 0px;
 }
 
 div:hover .brain{
-	top: 65px;
+	top: 35px;
 }
